# ming-drlms

./: .clang-format  .coverage  .gitattributes  .gitignore  Makefile  README.md  README_GUI.md  TESTING.md  drlms.yaml
.githooks/: README.md
.github/workflows/: ci.yml  release.yml  release_gui.yml
Diagrams/Flowcharts/: user_mgmt_flow.py
docs/: TESTING.md  TEST_PLAN.md
gui_poc/: app.py
gui_poc/docs/: DEPENDENCIES.md
gui_poc/ui/pages/: home.py  selfcheck.py
scripts/: check_i18n.py  gui_selfcheck_headless.sh
server_files/: README.md
src/agent/: log_agent.c
src/libipc/: shared_buffer.c  shared_buffer.h
src/ming_drlms/: i18n.py  main.py  users.py
src/ming_drlms/cli/: client.py  server.py
src/ming_drlms/cli/dev/: test.py
src/ming_drlms_gui/: app.py  state.py
src/ming_drlms_gui/i18n/: en.json  zh.json
src/ming_drlms_gui/net/: client.py
src/ming_drlms_gui/ui/: theme.py  widgets.py
src/ming_drlms_gui/views/: connect.py  main.py
src/server/: log_collector_server.c  rooms.c  rooms.h
src/tools/: ipc_sender.c  log_consumer.c  proc_launcher.c
tests/: integration_protocol.sh  test_cli_e2e.sh  test_ipc.c  test_ipc_suite  test_server_protocol.sh
tests/python/: conftest.py  test_cli_main.py  test_cli_user.py
tools/cli/: pyproject.toml
tools/cli/src/ming_drlms/: config.py  state.py
tools/packaging/systemd/: drlms.service
