[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ming-drlms"
version = "0.1.0.dev1"
description = "CLI wrapper for DRLMS server/agent with pretty UX"
readme = "README.md"
authors = [{ name = "lgnorant-lu", email = "zhouzihan825@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
urls = { "Source" = "https://github.com/lgnorant-lu/ming-drlms" }
requires-python = ">=3.8"
dependencies = [
  "typer[all]",
  "pyyaml",
  "rich",
  "psutil",
]

[project.scripts]
ming-drlms = "ming_drlms.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
# 下面这行是为了直接命令 setuptools 后端包含许可证文件
license-files = ["LICENSE"]





